<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fun.freechat</groupId>
  <artifactId>freechat</artifactId>
  <packaging>pom</packaging>
  <version>${revision}</version>
  <name>${project.artifactId}</name>

  <properties>
    <revision>0.2.5</revision>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!--dependency versions-->
    <spring-boot.version>3.1.4</spring-boot.version>
    <springdoc.version>2.2.0</springdoc.version>
    <mybatis.version>3.5.13</mybatis.version>
    <mybatis-dynamic-sql.version>1.4.1</mybatis-dynamic-sql.version>
    <mybatis-spring-boot-starter.version>2.3.0</mybatis-spring-boot-starter.version>
    <commons-collections4.version>4.4</commons-collections4.version>
    <commons-io.version>2.13.0</commons-io.version>
    <redisson.version>3.23.5</redisson.version>
    <objenesis.version>3.3</objenesis.version>
    <swagger-parser.version>2.1.18</swagger-parser.version>
    <langchain4j.version>0.25.0</langchain4j.version>

    <!--plugin versions-->
    <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
    <maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
    <mybatis-generator-maven-plugin.version>1.4.2</mybatis-generator-maven-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!--modules-->
      <dependency>
        <groupId>fun.freechat</groupId>
        <artifactId>freechat-common</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>fun.freechat</groupId>
        <artifactId>freechat-dal</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>fun.freechat</groupId>
        <artifactId>freechat-langchain4j</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>fun.freechat</groupId>
        <artifactId>freechat-service</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>fun.freechat</groupId>
        <artifactId>freechat-start</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!--spring-->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.version}</version>
      </dependency>

      <!--mybatis-->
      <dependency>
        <groupId>org.mybatis.spring.boot</groupId>
        <artifactId>mybatis-spring-boot-starter</artifactId>
        <version>${mybatis-spring-boot-starter.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mybatis</groupId>
        <artifactId>mybatis</artifactId>
        <version>${mybatis.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mybatis.dynamic-sql</groupId>
        <artifactId>mybatis-dynamic-sql</artifactId>
        <version>${mybatis-dynamic-sql.version}</version>
      </dependency>

      <!--redisson-->
      <dependency>
        <groupId>org.redisson</groupId>
        <artifactId>redisson</artifactId>
        <version>${redisson.version}</version>
      </dependency>

      <dependency>
        <groupId>org.redisson</groupId>
        <!-- for Spring Data Redis v.3.1.x -->
        <artifactId>redisson-spring-data-31</artifactId>
        <version>${redisson.version}</version>
      </dependency>

      <!--swagger-->
      <dependency>
        <groupId>io.swagger.parser.v3</groupId>
        <artifactId>swagger-parser</artifactId>
        <version>${swagger-parser.version}</version>
      </dependency>

      <!--langchain4j-->
      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j</artifactId>
        <version>${langchain4j.version}</version>
      </dependency>

      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-open-ai</artifactId>
        <version>${langchain4j.version}</version>
      </dependency>

      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-dashscope</artifactId>
        <version>${langchain4j.version}</version>
      </dependency>

      <!--commons-->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>${commons-collections4.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>

      <!--misc-->
      <dependency>
        <groupId>org.objenesis</groupId>
        <artifactId>objenesis</artifactId>
        <version>${objenesis.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jul-to-slf4j</artifactId>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>${maven-antrun-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>buildnumber-maven-plugin</artifactId>
          <version>${buildnumber-maven-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.mybatis.generator</groupId>
          <artifactId>mybatis-generator-maven-plugin</artifactId>
          <version>${mybatis-generator-maven-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <modules>
    <module>freechat-common</module>
    <module>freechat-dal</module>
    <module>freechat-langchain4j</module>
    <module>freechat-service</module>
    <module>freechat-start</module>
  </modules>
        
</project>
